packages/typ/tests/fixtures/diagnostics/0983_mli_module_path_unary_overapplied_06.mli
module M_zeta : sig
  type 'a t
end

val x_zeta : (int, bool) M_zeta.t
